# PyDAXLexer

./: .gitignore  LICENSE  NOTES.md  README.md  main.py  pyproject.toml  requirements.txt  sample.py
resources/best_practices_violators/: calculate_filter_table_argument.txt  iferror_division_without_divide.txt  intersect_used_for_virtual_relationship.txt  unused_variables_all_used_3.txt  unused_variables_comment_only.txt  unused_variables_mixed_3_used_3_unused.txt  unused_variables_var_not_used.txt
resources/sample_dax_expressions/: calc_column_dimCountries_Owner.txt  calc_column_dimWeather_dts_Datetime.txt  calc_column_factWeather_Datetime slicer.txt  measure_Year_Year Value.txt  measure__Measures_1950 year.txt  measure__Measures_Actual Temperature (℃).txt  measure__Measures_Actual Wind Speed (km_h).txt  measure__Measures_Actual temp F.txt  measure__Measures_ActualTempF.txt  measure__Measures_Average Pressure (mB).txt  measure__Measures_Average Temperature (℃).txt  measure__Measures_Average Temperature card title.txt  (+158 more)
src/PyDAX/: DAXProcessor.py  (+11 more)
tests/: conftest.py  test_avoid_if_error.py  test_avoid_one_minus_division.py  test_dax_processor.py  test_evaluatelog_rule.py  test_extract_artifact_references.py  test_filter_column_values.py  test_filter_measure_values_by_column.py  test_generate_html_strings_quotes.py  test_generate_html_with_violations.py  test_more_dax_cases.py  test_remove_comments_brackets.py  test_unused_variables_rule.py  test_use_divide.py  test_use_treatas_instead_of_intersect.py  test_userelationship_references.py  test_variables_and_functions.py
(+18 files in other folders)
